# Begim

./: .gitignore  README.md
.github/workflows/: ci.yml  tests.yml
begim-admin/: README.md  index.html  package-lock.json  package.json
begim-admin/src/: App.tsx  config.ts  index.css
begim-backend/: .env.bak.session  .env.example  .gitignore  API.md  API_DOCS.Domain.md  README.md  main.py  pyproject.toml  pytest.ini
begim-backend/app/: __init__.py  config.py  dependencies.py  lifecycle.py  logging.py
begim-backend/app/controllers/: __init__.py  admin.py  auth.py  catalog_meta.py  loyalty.py  me.py  orders.py  payments.py  products.py  reviews.py  sellers.py  social.py
begim-backend/bot/: dispatcher.py
begim-backend/bot/handlers/: __init__.py  start.py
begim-backend/database/: __init__.py  env.py  session.py
begim-backend/database/versions/: 3423af124b78_init.py
begim-backend/models/: __init__.py  base.py  broadcast.py  category.py  channel_post.py  city.py  community.py  enums.py  follow.py  notification.py  order.py  payment.py  product.py  product_photo.py  recipe.py  review.py  seller_contact.py  seller_group.py  seller_profile.py  story.py  user.py
begim-backend/repositories/: __init__.py  base_repository.py  category.py  city.py  loyalty.py  order.py  payment.py  product.py  review.py  seller_profile.py  social.py  uow.py  user.py
begim-backend/resources/views/: index.html
begim-backend/schemas/: __init__.py  auth.py  category.py  city.py  loyalty.py  order.py  payment.py  product.py  review.py  seller.py  social.py  user.py
begim-backend/scripts/: seed.py
begim-backend/services/: auth.py  loyalty.py  orders.py  payment_service.py  products.py  reviews.py  sellers.py  social.py
begim-backend/services/payments/: __init__.py  base.py  cash.py  click.py  payme.py  registry.py
begim-backend/services/security/: __init__.py  initdata.py  jwt.py  phone.py
begim-backend/static/css/: app.css
begim-backend/static/js/: app.js  data.js
begim-backend/tests/: test_api_integration.py  test_orders_state_machine.py  test_payments.py  test_reviews.py  test_security.py  test_slug.py
begim-backend/updates/: DONE.md  TODO.md
begim-backend/worker/: broadcast_dispatcher.py  main.py  tasks.py
begim-frontend/: README.md  updates.md
begim-frontend/design/: .env.example  .gitignore  (+6 more)
begim-miniapp/: .env.example  README.md  bot.py  commands.txt  index.html  package-lock.json  package.json  tsconfig.json  updates.md  vite.config.ts
begim-mobile/: README.md  index.html  package-lock.json
begim-shared/: README.md  admin.ts  auth.ts  endpoints.ts  format.ts  http.ts  index.ts  package-lock.json  package.json  types.ts  updates.md
(+109 files in other folders)
