[project]
name = "begim"
version = "0.1.0"
description = "Begim — marketplace for home bakers (backend)"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "aiofiles>=25.1.0",
    "aiogram>=3.26.0",
    "aiohttp>=3.13.5",
    "aiomysql>=0.2.0",
    "alembic>=1.18.4",
    "arq>=0.27.0",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.6",
    "fakeredis>=2.34.1",
    "granian>=2.7.2",
    "litestar[standard]>=2.21.1",
    "loguru>=0.7.3",
    "orjson>=3.10.0",
    "psutil>=7.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.12.1",
    "pymysql>=1.1.0",
    "redis[hiredis]>=5.0.0",
    "sqlalchemy>=2.0.48",
    "uvloop>=0.21.0; sys_platform != 'win32'",
]


[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-mock>=3.12.0",
    "coverage[toml]>=7.0.0",
    "faker>=22.0.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-timeout>=2.0.0",
    "pytest-xdist>=3.8.0",
    "pytest-mock>=3.12.0",
    "coverage[toml]>=7.0.0",
    "faker>=40.12.0",
    "aiosqlite>=0.19.0",
    "httpx>=0.26.0",
]

[tool.ruff]
target-version = "py312"
line-length = 320

[tool.ruff.lint]
select = ["E", "F", "W", "UP", "B", "SIM", "RUF"]
ignore = ["S101", "S104", "B008", "E501", "F401", "ANN001"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "T20"]
"benchmarks/**" = ["T20"]
"config/**" = ["F401", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "config"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-x",
]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "performance: marks tests as performance tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
timeout = 60

[tool.coverage.run]
source = ["app", "bot", "database", "models", "repositories", "schemas", "services", "workers"]
branch = true
omit = [
    "*/__init__.py",
    "*/migrations/*",
    "*/__pycache__/*",
]
concurrency = ["greenlet", "thread"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]
show_missing = true
fail_under = 35